now: re-route everything to index.js.

--- a/now.json
+++ b/now.json
@@ -4,5 +4,8 @@
   "builds": [
     { "src": "src/**/*.html", "use": "@now/static" },
     { "src": "index.js", "use": "@now/node-server" }
+  ],
+  "routes": [
+    { "src": "/(.*)", "dest": "index.js" }
   ]
 }
