--- a/now.json
+++ b/now.json
@@ -3,9 +3,9 @@
   "name": "now-basic-auth-express",
   "builds": [
     { "src": "src/**/*.html", "use": "@now/static" },
-    { "src": "index.js", "use": "@now/node-server" }
+    { "src": "index2.js", "use": "@now/node-server" }
   ],
   "routes": [
-    { "src": "/(.*)", "dest": "index.js" }
+    { "src": "/(.*)", "dest": "index2.js" }
   ]
 }
