--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "private": true,
   "dependencies": {
     "express": "^4.16.4",
-    "express-basic-auth": "^1.1.6"
+    "express-basic-auth": "^1.1.6",
+    "mime": "^2.4.0"
   }
 }
