--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "express": "^4.16.4",
     "express-basic-auth": "^1.1.6",
-    "mime": "^2.4.0"
+    "mime": "^2.4.0",
+    "serve-static": "^1.13.2"
   }
 }
